Calling TinkarStarterData.main from Sept2024ConnectathonStarterData.main